[package]
name = "ywinby"
edition = "2021"
version = "1.0.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-http = "3.2.2"
firestore = "0.22.0"
jfs = "0.8.0"
log = "0.4.17"
serde_derive = "1.0"
simple_on_shutdown = "1.0.0"
string-error = "0.1.0"
vapid = "0.6.0"
web-push = "0.9.3"
isahc = "1.7.2"
actix-web-httpauth = "0.8.0"

[dependencies.actix-web]
version = "4"
features = ["macros"]
optional = false
default-features = false

[dependencies.anyhow]
version = "1.0.68"
features = []
optional = false
default-features = false

[dependencies.clap]
version = "4.0.32"
features = ["help", "std", "derive", "env" ]
optional = false
default-features = false

[dependencies.jsonwebtoken]
version = "8.2.0"
features = []
optional = false
default-features = false

[dependencies.serde]
version = "1.0.151"
features = []
optional = false
default-features = false

[dependencies.serde_json]
version = "1.0.91"
features = []
optional = false
default-features = false

[dependencies.sloggers]
version = "2.1.1"
features = []
optional = false
default-features = false

[dependencies.tokio]
version = "1.3"
features = []
optional = false
default-features = false

[dependencies.uuid]
version = "1.2.2"
features = []
optional = false
default-features = false

